# update_update_service

./: bundle.json  updateengine.gni
adapter/default_config/feature_config/standard/: config.gni
common/: BUILD.gn
common/ability/log/: log.gni
common/ability/sa_loader/: sa_loader.gni
common/ability/sa_loader/include/: base_service_kits_impl.h  common_death_recipient.h  load_sa_service.h
common/ability/sys_event/: sys_event.gni
common/ability/sys_event/include/: update_system_event.h
common/ability/utils/: utils.gni
common/ability/utils/include/: json_utils.h
common/model/: model.gni
common/model/base/: business_error.h  error_message.h
foundations/: BUILD.gn  foundations.gni
foundations/ability/define/: define.gni
foundations/ability/define/include/: update_define.h
foundations/ability/log/: log.gni
foundations/ability/log/include/: update_log.h
foundations/ability/log/src/: update_log.cpp
foundations/ability/log/src/test/unittest/: BUILD.gn
foundations/ability/sa_loader/: sa_loader.gni
foundations/ability/sa_loader/include/: base_service_kits_impl.h  common_death_recipient.h  load_sa_service.h
foundations/ability/sa_loader/src/: load_sa_service.cpp
foundations/ability/sys_event/: sys_event.gni
foundations/ability/sys_event/include/: update_system_event.h
foundations/ability/utils/: utils.gni
foundations/ability/utils/include/: anonymous_utils.h  dupdate_json_utils.h  json_builder.h  string_utils.h  updateservice_json_utils.h
foundations/model/: base_model.gni  model.gni
foundations/model/base/: call_result.h  error_message.h
foundations/model/include/: business_error.h  call_result.h  error_message.h  network_type.h  update_device_type.h
frameworks/js/ani/: BUILD.gn
frameworks/js/ani/idl/: ohos.update.taihe
frameworks/js/ani/include/: ani_base_updater.h  ani_common_conveter.h  ani_local_updater.h  ani_restorer.h  ani_updater.h
frameworks/js/ani/src/: ani_base_updater.cpp  ani_common_conveter.cpp  ani_constructor.cpp  ani_local_updater.cpp  ani_restorer.cpp  ani_updater.cpp  taihe_impl.cpp
frameworks/js/napi/client/: BUILD.gn  cfi_blocklist.txt  update_client.cpp
frameworks/js/napi/client/include/: restorer.h  update_client.h
frameworks/js/napi/client/src/: local_updater.cpp  restorer.cpp  update_client.cpp  update_module.cpp
frameworks/js/napi/session/: BUILD.gn  cfi_blocklist.txt  update_session.gni  update_session.versionscript
frameworks/js/napi/session/include/: base_async_session.h  base_client.h  base_promise_session.h  base_session.h  napi_common_define.h  napi_common_utils.h  napi_session.h  napi_structs_base.h
frameworks/js/napi/session/src/: napi_common_utils.cpp  napi_session.cpp  session_manager.cpp
frameworks/js/napi/update/: BUILD.gn  cfi_blocklist.txt
frameworks/js/napi/update/common/include/: client_helper.h  iupdater.h  upgrade_file.h
frameworks/js/napi/update/common/src/: client_helper.cpp  iupdater.cpp
frameworks/js/napi/update/include/: define_property.h  local_updater.h  restorer.h  session_manager.h  session_type.h  update_client.h  update_result.h  update_session.h
frameworks/js/napi/update/src/: define_property.cpp  local_updater.cpp  restorer.cpp  session_manager.cpp  session_type.cpp  update_client.cpp  update_module.cpp  update_session.cpp
interfaces/inner_api/engine/: BUILD.gn  IUpdateService.idl  message_parcel_helper.cpp  update_helper.cpp  update_service_kits_impl.cpp  update_service_proxy.cpp
interfaces/inner_api/engine/include/: update_callback.h  update_service_kits_impl.h  update_service_proxy.h
interfaces/inner_api/engine/src/: update_callback.cpp  update_callback_stub.cpp  update_service_kits_impl.cpp  update_service_proxy.cpp
interfaces/inner_api/feature/update/model/: model.gni
interfaces/inner_api/feature/update/model/check/: check_result.h  search_status.h
interfaces/inner_api/feature/update/model/clear/: clear_options.h
interfaces/inner_api/feature/update/model/common/: base_json_struct.h  factory_reset_scope.h  order.h  parcel_common.h  progress.h  upgrade_status.h
interfaces/inner_api/feature/update/model/download/: download_options.h  pause_download_options.h  resume_download_options.h
interfaces/inner_api/feature/update/model/event/: event_classify.h  event_id.h  event_info.h  update_callback_info.h
interfaces/inner_api/feature/update/model/install/: install_mode.h
interfaces/inner_api/feature/update/model/message_parcel/: message_parcel.gni
interfaces/inner_api/feature/update/model/policy/: enum_policy_type.h  upgrade_period.h  upgrade_policy.h
interfaces/inner_api/feature/update/model/subscribe/: subscribe_info.h
interfaces/inner_api/feature/update/model/task/: task_body.h  task_body_member_mask.h  task_info.h
interfaces/inner_api/modulemgr/: BUILD.gn  modulemgr.gni
interfaces/inner_api/modulemgr/include/: module_log.h  module_manager.h  update_service_module.h
interfaces/inner_api/modulemgr/src/: module_manager.cpp  update_service_module.cpp
napi/include/: napi_base.h  (+3 more)
services/engine/: BUILD.gn  IUpdateService.idl  cfi_blocklist.txt  engine_sa.gni
services/engine/callback/: IUpdateCallback.idl
services/engine/etc/: dupdate_config.json  updater_sa.cfg
services/engine/include/: i_update_notify.h  progress_thread.h  update_no_constructor.h  update_notify.h  update_service.h  update_service_cache.h  update_service_impl_firmware.h  update_service_impl_manager.h  update_service_local_updater.h  update_service_proxy.h  update_service_restorer.h  update_service_stub.h  update_service_util.h
services/engine/sa_profile/: 3006.json  BUILD.gn
services/engine/src/: message_parcel_helper.cpp  progress_thread.cpp  stream_progress_thread.cpp  update_helper.cpp  update_notify.cpp  update_service.cpp  update_service_cache.cpp  update_service_impl_firmware.cpp  update_service_impl_manager.cpp  update_service_local_updater.cpp  update_service_restorer.cpp  update_service_stub.cpp  update_service_util_hmos.cpp
test/unittest/stream_install/: BUILD.gn  firmware_stream_installer_install_test.cpp  stream_progress_thread_test.cpp
(+276 files in other folders)
