
import("//build/ohos.gni")
import("//base/update/updateservice/updateengine.gni")
import("foundations.gni")

config("update_service_foundations_config") {
  include_dirs = common_include
}

ohos_shared_library("foundations") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  defines = []
  if (!ability_ability_runtime_enable) {
    defines += [ "ABILITY_RUNTIME_INNER_ENABLE" ]
  }

  include_dirs = common_include
  sources = common_sources
  deps = common_deps
  external_deps = common_external_deps

  public_configs = [ ":update_service_foundations_config" ]

  part_name = "$updateengine_part_name"
  subsystem_name = "updater"
}
