# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updateservice/foundations/foundations.gni")
import("//base/update/updateservice/updateengine.gni")
import("//build/ohos.gni")

config("update_service_foundations_config") {
  include_dirs = foundations_include
}

ohos_shared_library("update_foundations") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  defines = []
  if (!ability_ability_runtime_enable) {
    defines += [ "ABILITY_RUNTIME_INNER_ENABLE" ]
  }

  include_dirs = foundations_include
  sources = foundations_sources
  deps = foundations_deps
  external_deps = foundations_external_deps

  public_configs = [ ":update_service_foundations_config" ]

  innerapi_tags = [ "platformsdk" ]
  part_name = "$updateengine_part_name"
  subsystem_name = "updater"
}
