# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../inner_api/modulemgr/modulemgr.gni")

config("module_mgr_library_native_config") {
  include_dirs = modulemgr_include
}

ohos_shared_library("update_module_mgr") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  include_dirs = modulemgr_include
  sources = modulemgr_src
  deps = modulemgr_deps
  external_deps = modulemgr_external_deps
  public_deps = modulemgr_public_deps
  part_name = "$updateengine_part_name"
  subsystem_name = "updater"
  cflags = modulemgr_cflags
  innerapi_tags = [ "sasdk" ]
  public_configs = [ ":module_mgr_library_native_config" ]
}
