# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updateservice/updateengine.gni")

modulemgr_root_path = "$updateengine_root_path/interfaces/inner_api/modulemgr"

modulemgr_internal_deps = []

modulemgr_external_deps = [
  "c_utils:utils",  # refbase
  "hilog:libhilog",
  "ipc:ipc_core",
  "safwk:system_ability_fwk",
]

modulemgr_deps = []

modulemgr_public_deps = []

modulemgr_include = [
  "$modulemgr_root_path/include",
  "$updateengine_root_path/foundations/ability/log/include",
]

modulemgr_src = [
  "$modulemgr_root_path/src/update_service_module.cpp",
  "$modulemgr_root_path/src/module_manager.cpp",
  "$updateengine_root_path/foundations/ability/log/src/update_log.cpp",
]

modulemgr_cflags = [
  "-fPIC",
  "-Os",
  "-Werror",
]
