# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  update_service_dupdate_config_path =
      "//base/update/updateservice/services/engine/etc/dupdate_config.json"
  update_service_updater_sa_cfg_path =
      "//base/update/updateservice/services/engine/etc/updater_sa.cfg"
  update_service_sa_profile_path =
      "//base/update/updateservice/services/engine/sa_profile/3006.json"
  ability_ability_runtime_enable = true
  if (!defined(global_parts_info.ability_ability_runtime)) {
    ability_ability_runtime_enable = false
  }
  communication_netmanager_base_enable = true
  if (!defined(global_parts_info.communication_netmanager_base)) {
    communication_netmanager_base_enable = false
  }
}
