# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../updateengine.gni")

ohos_shared_library("$updateengine_client_library_name") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "./cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"

  sources = []
  if (ability_ability_runtime_enable) {
    sources += [
      "$updateengine_root_path/frameworks/js/napi/base/src/client_helper.cpp",
      "$updateengine_root_path/frameworks/js/napi/base/src/define_property.cpp",
      "$updateengine_root_path/frameworks/js/napi/base/src/iupdater.cpp",
      "$updateengine_root_path/frameworks/js/napi/base/src/napi_common_utils.cpp",
      "$updateengine_root_path/frameworks/js/napi/client/src/local_updater.cpp",
      "$updateengine_root_path/frameworks/js/napi/client/src/restorer.cpp",
      "$updateengine_root_path/frameworks/js/napi/client/src/update_client.cpp",
      "$updateengine_root_path/frameworks/js/napi/client/src/update_module.cpp",
      "$updateengine_root_path/frameworks/js/napi/client/src/update_session.cpp",
      "$updateengine_root_path/frameworks/js/napi/session/src/napi_session.cpp",
      "$updateengine_root_path/frameworks/js/napi/session/src/session_manager.cpp",
    ]
  }

  include_dirs = [
    "$updateengine_root_path/frameworks/js/napi/base/include",
    "$updateengine_root_path/frameworks/js/napi/client/include",
    "$updateengine_root_path/frameworks/js/napi/session/include",

    "$updateengine_root_path/interfaces/inner_api/common/include",
    "$updateengine_root_path/interfaces/inner_api/include",

    "$updateengine_root_path/services/core/ability/utils/include",

    "//third_party/json/include",
    "//third_party/node/src",  # napi
  ]

  deps = [
    "$updateengine_root_path/interfaces/inner_api/engine:$updateengine_inner_library_name",
    "//third_party/json:nlohmann_json_static",
  ]

  external_deps = [
    "c_utils:utils",  # sptr
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (ability_ability_runtime_enable) {
    external_deps += [ "napi:ace_napi" ]
  }

  install_enable = true
  relative_install_dir = "module"
  part_name = "$updateengine_part_name"
  subsystem_name = "updater"

  cflags = [
    "-fPIC",
    "-Os",
    "-Werror",
    "-DNAPI_VERSION=8",
  ]
}
