# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../js/napi/session/update_session.gni")

config("update_session_library_native_config") {
  include_dirs = session_include_dirs
}

ohos_shared_library("update_session") {
  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  sources = session_sources
  include_dirs = session_include_dirs
  include_dirs += [
    "$root_path/foundations/ability/define/include",
    "$root_path/foundations/ability/log/include",
    "$root_path/foundations/ability/utils/include",
    "$root_path/foundations/model/include",
  ]

  external_deps = session_external_deps
  part_name = "update_service"
  subsystem_name = "updater"
  cflags = session_cflags
  public_configs = [ ":update_session_library_native_config" ]
}
