# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/update/updateservice/updateengine.gni")

root_path = "//base/update/updateservice"
session_sources = [
  "$root_path/frameworks/js/napi/session/src/napi_common_utils.cpp",
  "$root_path/frameworks/js/napi/session/src/napi_session.cpp",
]

session_include_dirs = [ "$root_path/frameworks/js/napi/session/include" ]

session_external_deps = [
  "access_token:libaccesstoken_sdk",
  "access_token:libtokenid_sdk",
  "hilog:libhilog",
  "ipc:ipc_core",
  "json:nlohmann_json_static",
  "napi:ace_napi",
]

session_cflags = [
  "-fPIC",
  "-Os",
  "-Werror",
  "-DNAPI_VERSION=8",
  "-fstack-protector-strong",
]
